--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ h5 {
 .btn {
   background-color: var(--primary-highlight);
   margin-top: 1rem;
-  padding: 0.5rem 1rem;
+  padding: 1rem 2rem;
   color: var(--primary-text);
   transition: 0.5s;
 }
@@ -81,14 +81,12 @@ h5 {
   position: fixed;
   right: 2rem;
   opacity: 0;
-  pointer-events: none;
   transition: 0.3s;
   z-index: 100;
 }
 
 .to-top.active {
   bottom: 5rem;
-  pointer-events: auto;
   opacity: 1;
 }
 
@@ -100,7 +98,7 @@ header nav {
   top: 0;
   left: 0;
   width: 100%;
-  height: 5rem;
+  height: 6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -220,19 +218,6 @@ header nav ul.mobilemenu {
   padding-bottom: 2rem;
 }
 
-#hero .content .btn {
-  background-color: var(--primary-highlight);
-  margin-top: 1rem;
-  padding: 0.5rem 1rem;
-  color: var(--primary-text);
-  transition: 0.5s;
-}
-
-#hero .content .btn:hover {
-  background-color: var(--secondary-highlight);
-  color: var(--primary-white);
-}
-
 /**************** about me section *******************/
 
 #about {
@@ -247,7 +232,6 @@ header nav ul.mobilemenu {
 }
 
 #about .container .btn {
-  padding: 1rem 2rem;
   margin-bottom: 2rem;
 }
 
@@ -268,7 +252,7 @@ header nav ul.mobilemenu {
   width: 32%;
   padding: 1rem;
   border-radius: 0.2rem;
-  box-shadow: 0 0.6rem 1.2rem rgba(0, 0, 0, 0.3);
+  box-shadow: 0 0.6rem 1.2rem rgba(0, 0, 0, 0.4);
   transition: 0.3s ease-in-out;
 }
 
@@ -285,22 +269,25 @@ header nav ul.mobilemenu {
   object-fit: cover;
 }
 
+#services .container .cards .card h3 {
+  padding-top: 1rem;
+}
+
 #services .container .cards .card p {
-  padding-bottom: 0.6rem;
+  padding-bottom: 1rem;
 }
 
 /**************** skills section *******************/
 
 #skills {
   background-color: var(--primary-bg);
-  min-height: 50vh;
 }
 
 #skills .container {
   position: relative;
   background-color: var(--primary-bg);
   color: var(--primary-white);
-  padding: 5rem;
+  padding: 5rem 1rem;
 }
 
 #skills .container h2 {
@@ -371,30 +358,6 @@ header nav ul.mobilemenu {
   cursor: pointer;
 }
 
-/* contact me links */
-
-#contact-links .container .social-media i {
-  padding: 0 1rem 2rem 1rem;
-  cursor: pointer;
-  color: var(--primary-bg);
-}
-
-#contact-links .container .social-media i:hover {
-  color: var(--primary-text);
-}
-
-#contact-links .container .social-media #linkedin i:hover {
-  color: var(--linkedin);
-}
-
-#contact-links .container .social-media #github i:hover {
-  color: var(--github);
-}
-
-#contact-links .container .social-media #codewars i:hover {
-  color: rgb(250, 99, 99);
-}
-
 /**************** footer *******************/
 
 footer {
@@ -449,10 +412,6 @@ footer .container .contact-box .right .field {
   transition: 0.3s;
 }
 
-footer .container .contact-box .right .field:hover {
-  background-color: var(--primary-highlight);
-}
-
 footer .container .contact-box .right .field:focus {
   background-color: var(--primary-white);
   border: 2px solid var(--secondary-highlight);
@@ -460,6 +419,26 @@ footer .container .contact-box .right .field:focus {
 
 footer .container .contact-box .right .area {
   min-height: 9rem;
+}
+
+/* contact me links */
+
+#contact-links .container .social-media i {
+  padding: 0 1rem;
+  cursor: pointer;
+  color: var(--primary-bg);
+}
+
+#contact-links .container .social-media #linkedin i:hover {
+  color: var(--linkedin);
+}
+
+#contact-links .container .social-media #github i:hover {
+  color: var(--github);
+}
+
+#contact-links .container .social-media #codewars i:hover {
+  color: rgb(250, 99, 99);
 }
 
 footer .copyright {
@@ -509,24 +488,30 @@ footer .copyright {
 }
 
 @media (max-width: 992px) {
-  #skills .container .progress-bars {
-    grid-gap: 5rem;
-  }
-  #skills .container .progress-bars .progress {
-    width: 15rem;
-  }
-}
-
-@media (max-width: 768px) {
-  #about .container p {
-    padding: 1rem 1rem;
-  }
   #services .container .cards {
     flex-direction: column;
   }
   #services .container .cards .card {
     width: 100%;
     margin-bottom: 1rem;
+  }
+  #skills .container .progress-bars {
+    grid-gap: 5rem;
+  }
+  #skills .container .progress-bars .progress {
+    width: 15rem;
+  }
+  footer .container .contact-box {
+    grid-template-columns: 1fr;
+  }
+  footer .container .contact-box .left img {
+    height: 20rem;
+  }
+}
+
+@media (max-width: 768px) {
+  #about .container p {
+    padding: 1rem 1rem;
   }
   #skills .container .progress-bars {
     grid-template-columns: 1fr;
@@ -541,12 +526,6 @@ footer .copyright {
   }
   #projects .container #project-img {
     height: 25vh;
-  }
-  footer .container .contact-box {
-    grid-template-columns: 1fr;
-  }
-  footer .container .contact-box .left img {
-    height: 20rem;
   }
 }
 
