--- a/animation.css
+++ b/animation.css
@@ -1,165 +1,178 @@
 body {
-    background-color: var(--primary-bg);
-    background: linear-gradient(-45deg, #6BD0FF, #1A74E2);
+  background-color: var(--primary-bg);
+  background: linear-gradient(-45deg, #6bd0ff, #1a74e2);
 }
 
 /* animated background */
 
 #animated-cards .container {
-    margin: 0 auto;
-    width: 1200px;
-    margin: 7rem auto 2rem auto;
-    background: linear-gradient(-45deg, #1F2123, #6BD0FF, #1A74E2, #1F2123);
-    background-size: 400% 400%;
-    animation: gradient 15s ease infinite;
-    clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
+  margin: 0 auto;
+  width: 1200px;
+  margin: 7rem auto 2rem auto;
+  background: linear-gradient(-45deg, #1f2123, #6bd0ff, #1a74e2, #1f2123);
+  background-size: 400% 400%;
+  animation: gradient 15s ease infinite;
+  clip-path: polygon(
+    0% 15%,
+    15% 15%,
+    15% 0%,
+    85% 0%,
+    85% 15%,
+    100% 15%,
+    100% 85%,
+    85% 85%,
+    85% 100%,
+    15% 100%,
+    15% 85%,
+    0% 85%
+  );
 }
 
 @keyframes gradient {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 /* animated circle with content */
 
 #animated-cards .container h2 {
-    position: relative;
-    padding-bottom: 2rem;
-    margin: 2rem 0;
-    color: var(--primary-text);
+  position: relative;
+  padding-bottom: 2rem;
+  margin: 2rem 0;
+  color: var(--primary-text);
 }
 
 #animated-cards .container h2:after {
-    content: '';
-    position: absolute;
-    left: 50%;
-    bottom: 0;
-    transform: translate(-50%);
-    height: 0.5rem;
-    width: 5rem;
-    border-radius: 5px;
-    background-color: var(--primary-highlight);
+  content: "";
+  position: absolute;
+  left: 50%;
+  bottom: 0;
+  transform: translate(-50%);
+  height: 0.5rem;
+  width: 5rem;
+  border-radius: 5px;
+  background-color: var(--primary-highlight);
 }
 
-.content{
-    width: 100%;
-    display: inline-block;
-    margin: 0 auto;
-    position: relative;
-    min-height: 65vh;
-    /* max-width: 300px; */
+.content {
+  width: 100%;
+  display: inline-block;
+  margin: 0 auto;
+  position: relative;
+  min-height: 65vh;
+  /* max-width: 300px; */
 }
 
-.circle{
-    position: absolute;
-    left: 0;
-    right: 0;
-    margin: 10rem auto;
-    width: 200px;
-    transform: translateY(-50%);
-    transition: all .5s;
-    cursor: pointer;
+.circle {
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 10rem auto;
+  width: 200px;
+  transform: translateY(-50%);
+  transition: all 0.5s;
+  cursor: pointer;
 }
 
 .circle_inner_layer {
-    width: 600px;
-    height: 200px;
-    transition: all .4s;
-    position: absolute;
+  width: 600px;
+  height: 200px;
+  transition: all 0.4s;
+  position: absolute;
 }
 
 .circle_inner_layer img {
-    width: 100%;
-    position: absolute;
-    bottom: 0;
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
 .circle:hover h3 {
-    opacity: 1;
-    top: 0;
+  opacity: 1;
+  top: 0;
 }
 
 .circle:hover h3 {
-    transition: 0.2s;
+  transition: 0.2s;
 }
 
 .circle .circle_inner_layer:nth-child(3) {
-    top: 0px;
-    left: -800px;
-    z-index: -1;
+  top: 0px;
+  left: -800px;
+  z-index: -1;
 }
 
 .circle .circle_inner_layer:nth-child(2) {
-    top: 0px;
-    left: -290px;
+  top: 0px;
+  left: -290px;
 }
 
 .circle .circle_inner_layer:nth-child(1) {
-    top: 0px;
-    left: 0px;
+  top: 0px;
+  left: 0px;
 }
 
 .circle_title {
-    text-align: center;
+  text-align: center;
 }
 
 .circle_title h3 {
-    opacity: 0;
-    color: var(--primary-highlight);
-    margin: 0;
-    transition: 0.2s;
-    position: relative;
-    top: -10px;
+  opacity: 0;
+  color: var(--primary-highlight);
+  margin: 0;
+  transition: 0.2s;
+  position: relative;
+  top: -10px;
 }
 
 .circle_inner {
-    border-radius: 50%;
-    top: 3rem;
-    background: #b0d5d6;
-    overflow: hidden;
-    margin: auto;
-    width: 200px;
-    z-index: 1;
-    transition: all 0.5s;
-    height: 200px;
-    position: relative;
-    box-shadow: 1px 5px 45px var(--primary-highlight);
+  border-radius: 50%;
+  top: 3rem;
+  background: #b0d5d6;
+  overflow: hidden;
+  margin: auto;
+  width: 200px;
+  z-index: 1;
+  transition: all 0.5s;
+  height: 200px;
+  position: relative;
+  box-shadow: 1px 5px 45px var(--primary-highlight);
 }
 
 .circle_inner:hover {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 .circle_inner:hover .circle_inner_layer:nth-child(3) {
-    left: -140px;
-    transition: all 4s linear;
+  left: -140px;
+  transition: all 4s linear;
 }
 
 .circle_inner:hover .circle_inner_layer:nth-child(2) {
-    left: -400px;
-    transition: all 4s linear;
+  left: -400px;
+  transition: all 4s linear;
 }
 
 .circle_inner:hover .circle_inner_layer:nth-child(1) {
-    left: -80px;
-    transition: all 4s linear;
+  left: -80px;
+  transition: all 4s linear;
 }
 
 @media (max-width: 568px) {
-    #animated-cards .container {
-        width: 90%;
-    }
+  #animated-cards .container {
+    width: 90%;
+  }
 }
 
 @media (max-width: 320px) {
-    #animated-cards .container {
-        width: 90%;
-    }
+  #animated-cards .container {
+    width: 90%;
+  }
 }
