--- a/gallery.css
+++ b/gallery.css
@@ -1,91 +1,80 @@
 :root {
-    --primary-text: #101010;
-    --primary-bg: #1F2123;
-    --primary-white: #FFFFFF;
-    --primary-highlight: #6BD0FF;
-    --secondary-highlight: #3FA0EF;
-    --secondary-dark-highlight: #1A74E2;
-    --linkedin: #2867B2;
-    --insta: #E1306C;
-    --twitter: #1DA1F2;
-    --github: #6e5494;
+  --primary-text: #101010;
+  --primary-bg: #1f2123;
+  --primary-white: #ffffff;
+  --primary-highlight: #6bd0ff;
+  --secondary-highlight: #3fa0ef;
+  --secondary-dark-highlight: #1a74e2;
+  --linkedin: #2867b2;
+  --insta: #e1306c;
+  --twitter: #1da1f2;
+  --github: #6e5494;
 }
 
-#photos {
-    min-height: 100vh;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-#photos .container {
-    position: relative;
-    margin-bottom: 5rem;
-    padding-bottom: 5rem;
+/* parallax story */
+
+#scroll-section {
+  background-image: linear-gradient(to right, #f1f4f5, #dbf1fa);
 }
 
-#photos .container .gallery {
-    position: relative;
-    width: 100%;
-    margin: 0 auto;
-    padding-bottom: 4rem;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-gap: 0.5rem;
+.about {
+  height: 500vh;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
 }
 
-#photos .container .gallery .img {
-    position: relative;
-    margin-top: 10rem;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-    box-shadow: 0px 2px 2px rgba(0,0,0,.9);
-    border-radius: 2px;
+.about-title {
+  width: 50%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding: 0 2rem;
+  margin: 0 !important;
 }
 
-#photos .container .gallery .img:first-child {
-    grid-column-start: span 2;
-    grid-row-start: span 2;
+.about-pages {
+  width: 50%;
 }
 
-#photos .container .gallery .img:nth-child(2n+3) {
-    grid-row-start: span 2;
+.about-pages div {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
 }
 
-#photos .container .gallery .img:nth-child(4n+5) {
-    grid-column-start: span 2;
-    grid-row-start: span 2;
+/* .about-pages div > p {
+  width: 90%;
+  font-size: 1.5rem;
+  line-height: 2rem;
+} */
+
+.vertical img {
+  height: 70vh;
+  box-shadow: 2px 2px 25px 5px #333333;
 }
 
-#photos .container .gallery .img:nth-child(6n+7) {
-    grid-row-start: span 1;
+.boxy img {
+  width: 90%;
 }
 
-#photos .container .gallery .img:nth-child(8n+9) {
-    grid-column-start: span 1;
-    grid-row-start: span 1;
+#full-concepts {
+  text-align: center;
 }
 
-#photos .container .gallery .img img {
-    height: 100%;
-    width: 100%;
-    object-fit: cover;
-    filter: brightness(0.5) grayscale(100);
-    transition: 0.2s ease-in-out;
+#full-concepts img {
+  width: 90vw;
 }
 
-#photos .container .gallery .img:hover img {
-    filter: brightness(1) grayscale(0);
-}
-
-@media (max-width: 768px) {
-    #photos .container .gallery {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-    }
-}
-
-@media (max-width: 568px) {
-    #photos .container .gallery {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-    }
-}
+/* media queries */
