--- a/style.css
+++ b/style.css
@@ -260,20 +260,24 @@ header nav ul.mobilemenu {
 
 /**************** about me section *******************/
 
-/* #about {
+#about {
   position: relative;
-  background-color: var(--primary-text);
   padding: 2rem 0;
+}
+
+#about .container {
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    312deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(31, 33, 35, 0.5) 99%
+  );
 }
 
 #about .container p {
   padding: 1rem 5rem 0 5rem;
   text-align: center;
 }
-
-#about .container .btn {
-  margin-bottom: 2rem;
-} */
 
 /**************** services section *******************/
 
@@ -283,17 +287,25 @@ header nav ul.mobilemenu {
 
 #services .container .cards {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   padding: 2rem 0;
 }
 
 #services .container .cards .card {
-  background-color: var(--primary-white);
-  width: 32%;
+  background: rgb(255, 255, 255);
+  background: linear-gradient(
+    312deg,
+    rgba(255, 255, 255, 1) 0%,
+    rgba(31, 33, 35, 0.5) 95%
+  );
+  width: 45%;
+  margin: 2rem;
   padding: 1rem;
+  border: none;
   border-radius: 0.2rem;
   box-shadow: 0 0.6rem 1.2rem rgba(0, 0, 0, 0.4);
-  transition: 0.3s ease-in-out;
+  transform-style: preserve-3d;
+  /* transition: 0.3s ease-in-out; */
 }
 
 #services .container .cards .card:hover {
@@ -303,10 +315,20 @@ header nav ul.mobilemenu {
 }
 
 #services .container img {
-  margin-bottom: 1rem;
+  margin: 5rem 1rem;
   width: 100%;
-  height: 15rem;
-  object-fit: cover;
+}
+
+#services .container .card-icon {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+#services .container .cards .card:hover > .card-icon {
+  transform: translateZ(50px);
+  transition: all 0.2s;
 }
 
 #services .container .cards .card h3 {
