--- a/gallery.css
+++ b/gallery.css
@@ -24,7 +24,7 @@
 }
 
 .about {
-  height: 500vh;
+  height: 900vh;
   width: 80%;
   margin: 0 auto;
   display: flex;
@@ -43,7 +43,36 @@
 }
 
 .about-pages {
+  margin-top: 3rem;
   width: 50%;
+}
+
+h1 {
+  position: relative;
+  padding: 10vh 0 1rem 0;
+  font-family: "Merriweather Sans", sans-serif;
+  font-weight: 800;
+  letter-spacing: 1rem;
+  font-size: 3rem;
+  font-weight: 900;
+  text-transform: uppercase;
+}
+
+h1:after {
+  content: "";
+  position: absolute;
+  left: 47.5%;
+  bottom: 0;
+  transform: translate(-50%);
+  height: 0.5rem;
+  width: 17rem;
+  border-radius: 5px;
+  background-color: var(--primary-highlight);
+}
+
+.about-title p {
+  margin-top: 1rem;
+  line-height: 2;
 }
 
 .about-pages div {
@@ -71,7 +100,12 @@
 }
 
 #horizontal-banners img {
-  max-width: 100vw;
+  max-width: 99vw;
+  justify-content: center;
+}
+
+.design-container h2 {
+  margin: 5rem 0;
 }
 
 #full-concepts {
@@ -80,6 +114,7 @@
 
 #full-concepts img {
   width: 90vw;
+  margin-bottom: 5rem;
 }
 
 /* media queries */
