--- a/style.css
+++ b/style.css
@@ -194,6 +194,23 @@ header nav ul.mobilemenu {
   /* background: #333333
     url("https://images.unsplash.com/photo-1489846986031-7cea03ab8fd0?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1352&q=80")
     no-repeat bottom center/cover; */
+
+  /* background: linear-gradient(-45deg, #1f2123, #6bd0ff, #1a74e2, #1f2123, 0.1);
+  background-size: 105% 105%;
+  animation: gradient 15s ease infinite;
+}
+
+@keyframes gradient {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
+} */
 }
 
 #hero .content {
@@ -246,7 +263,7 @@ header nav ul.mobilemenu {
 }
 
 #hero .hero-container .about-text {
-  padding: 2rem 1rem 0 1rem;
+  padding: 3rem 1rem 0 1rem;
   text-align: center;
 }
 
@@ -255,7 +272,7 @@ header nav ul.mobilemenu {
 }
 
 #hero .hero-container .btn {
-  margin: 0.5rem 0 2rem 0;
+  margin: 0.5rem 0 3rem 0;
 }
 
 /**************** about me section *******************/
@@ -300,12 +317,12 @@ header nav ul.mobilemenu {
   );
   width: 45%;
   margin: 2rem;
-  padding: 1rem;
+  padding: 2rem;
   border: none;
   border-radius: 0.2rem;
   box-shadow: 0 0.6rem 1.2rem rgba(0, 0, 0, 0.4);
   transform-style: preserve-3d;
-  /* transition: 0.3s ease-in-out; */
+  line-height: 2;
 }
 
 #services .container .cards .card:hover {
@@ -405,7 +422,7 @@ header nav ul.mobilemenu {
   position: absolute;
   left: 50%;
   width: 2px;
-  height: 100%;
+  height: 95%;
   background: #c5c5c5;
 }
 
@@ -418,7 +435,8 @@ header nav ul.mobilemenu {
   list-style: none;
   position: relative;
   width: 50%;
-  padding: 1.25rem 2.5rem;
+  /* padding: 1.25rem 2.5rem; */
+  padding: 0 2.5rem;
 }
 
 #timeline ul li:nth-child(odd) {
@@ -434,13 +452,13 @@ header nav ul.mobilemenu {
 }
 
 .timeline-content {
-  padding: 3.2rem 0 1rem 0;
+  padding-top: 1rem;
 }
 
 #timeline ul li:nth-child(odd):before {
   content: "";
   position: absolute;
-  top: 5rem;
+  top: 1.5rem;
   right: -9px;
   width: 1rem;
   height: 1rem;
@@ -451,7 +469,7 @@ header nav ul.mobilemenu {
 #timeline ul li:nth-child(even):before {
   content: "";
   position: absolute;
-  top: 5rem;
+  top: 1.5rem;
   left: -6px;
   width: 1rem;
   height: 1rem;
@@ -639,7 +657,6 @@ footer .copyright {
     top: 0;
   }
   header nav ul li ul li {
-    padding: 0;
     text-align: center;
   }
 }
@@ -650,10 +667,12 @@ footer .copyright {
   }
   #services .container .cards {
     flex-direction: column;
+    justify-content: center;
   }
   #services .container .cards .card {
     width: 100%;
     margin-bottom: 1rem;
+    margin: 2rem 0;
   }
   #skills .container .progress-bars {
     grid-gap: 5rem;
@@ -703,7 +722,7 @@ footer .copyright {
   }
   #timeline ul li:nth-child(odd):before,
   #timeline ul li:nth-child(even):before {
-    top: 5rem;
+    top: 1.5rem;
     left: 1rem;
   }
 }
