--- a/style.css
+++ b/style.css
@@ -182,6 +182,10 @@ header nav ul.mobilemenu {
   display: block;
 }
 
+header nav .close-icon {
+  display: none;
+}
+
 /***************************** hero banner ******************************/
 
 #hero {
@@ -630,8 +634,9 @@ footer .copyright {
 
 @media (max-width: 1200px) {
   header nav .icon {
+    position: absolute;
     display: block;
-    padding-right: 1rem;
+    right: 2rem;
   }
   header nav ul {
     display: none;
@@ -658,6 +663,22 @@ footer .copyright {
   }
   header nav ul li ul li {
     text-align: center;
+  }
+  header nav ul.mobilemenu {
+    position: absolute;
+    top: 5rem;
+    right: 0;
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 2rem;
+  }
+  header nav .close-icon {
+    display: block;
+    margin-top: 5rem;
   }
 }
 
